Fix a weird scrolling/overflow problem with IE

--- a/app/view/theme/scss/includes/_style.scss
+++ b/app/view/theme/scss/includes/_style.scss
@@ -160,6 +160,7 @@ footer p {
  */
 
 body {
+  @extend %vertically-scrollable;
   background-color: $gray-base;
 
   &::before {
